# Visual-Search-System

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.txt
.github/workflows/: python.yml
tests/: test_dummy.py
